--- a/main.css
+++ b/main.css
@@ -103,13 +103,13 @@ button.a4 {
 }
 
 #pause,
-#buttons button.answer {
+button.answer {
   display: none;
   visibility: hidden;
   box-shadow: 0px 0px 10px 0px #222;
   font-family: consolas, monospace;
   font-size: 2em;
-  background: #2f2f2f;
+  background: #808080;
   border: 0;
   cursor: pointer;
   outline: 0;
@@ -121,15 +121,19 @@ body.has_hover button.answer:enabled:hover {
 }
 
 #pause:active,
-#buttons button.answer:active {
+button.answer:active {
   box-shadow: none;
   background: #aaa;
 }
-
-.wrong {
+button.answer:disabled {
+  color: #666;
+  background: #808080;
+  cursor: default;
+}
+button.answer:disabled.wrong {
   color: #d03c3c;
 }
-.right {
+button.answer:disabled.right {
   color: #47dc47;
 }
 .ui {
